tests/e2e/semantics/return_outside3.error
Error: syntax error in story at line 3, column 5

3|        return a
          ^^^^^^^^

E0004: `return` is allowed only inside functions
