tests/e2e/semantics/return_outside3.story
while true
    a = 1
    return a
